tests/baselines/reference/genericTypeUsedWithoutTypeArguments3.errors.txt
genericTypeUsedWithoutTypeArguments3.ts(2,26): error TS2314: Generic type 'Foo<T>' requires 1 type argument(s).


==== genericTypeUsedWithoutTypeArguments3.ts (1 errors) ====
    interface Foo<T> { }
    interface Bar<T> extends Foo { }
                             ~~~
!!! error TS2314: Generic type 'Foo<T>' requires 1 type argument(s).
    